(ocamlyacc parser)

(ocamllex lexer)

(library
 (name slanglib)
 (modules
  Front_end
  Lexer
  Parser
  Ast
  Past
  Type
  Errors
  Free_vars
  Interp_0
  Interp_1
  Interp_2
  Interp_3
  Jargon
  Jargon_to_x86
  Value
  Tests
  Static
  Option)
 (preprocess
  (pps ppx_deriving_yojson)))

(executable
 (name slang)
 (libraries slanglib)
 (modules slang))
